--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,3 +17,9 @@ set(CMAKE_C_FLAGS "${CMAKE_CXX_FLAGS} -std=c99")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
 
 add_subdirectory(src)
+
+install(FILES scripts/paste-binouse-init
+  DESTINATION bin)
+
+install(DIRECTORY www
+  DESTINATION share/paste-binouse)
