--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "mimosa"]
 	path = mimosa
 	url = git://github.com/abique/mimosa
+[submodule "www/CodeMirror2"]
+	path = www/CodeMirror2
+	url = git://github.com/marijnh/CodeMirror2.git
