--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "mimosa"]
 	path = mimosa
 	url = git://github.com/abique/mimosa
-[submodule "www/CodeMirror2"]
-	path = www/CodeMirror2
-	url = git://github.com/marijnh/CodeMirror2.git
+[submodule "www/CodeMirror"]
+	path = www/CodeMirror
+	url = git://github.com/marijnh/CodeMirror.git
